# macro

./: CMakeLists.txt  LICENSE.md  README.md
.circleci/: config.yml
examples/: 0001_hello_world.macro
src/: Macro.cc  Macro.h  main.cc
src/ast/: Ast.cc  Ast.h
src/parse/: MacroParser.cc  MacroParser.h
src/read/: PostgresReader.cc  PostgresReader.h
src/write/: MacroWriter.cc  MacroWriter.h
